fix jumping reactions and one other update for App tests

--- a/social-messenger/src/components/CustomMessage/CustomMessage.css
+++ b/social-messenger/src/components/CustomMessage/CustomMessage.css
@@ -161,12 +161,11 @@ span.react-images__footer__count.react-images__footer__count--isModal {
 
 @media screen and (max-width: 640px) {
   .str-chat__message-simple__actions__action--thread, .str-chat__message-simple__actions__action--reactions {
-    display: unset;
+    display: flex;
   }
 
   .str-chat__message-simple__actions__action--options {
-    display: unset;
-    margin-top: 2px;
+    display: flex;
   }
 
   .str-chat__message--me .str-chat__message-inner > .str-chat__message-simple__actions, .str-chat__message-simple--me .str-chat__message-inner > .str-chat__message-simple__actions {
